--- a/about.html
+++ b/about.html
@@ -53,14 +53,14 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/GURU.pdf')">
+    <header class="masthead" style="background-image: url('img/GURU.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
+              <h1>About Us</h1>
+              <span class="subheading">This is what we do.</span>
             </div>
           </div>
         </div>
