--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/GURU.jpg')">
+    <header class="masthead" style="background-image: url('img/GURU.jpg'); background-size: 300px">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
