--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/npur_guys.jpg')">
+    <header class="masthead" style="background-image: url('img/npur_guys.jpg'); opacity: 0.7">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
