--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/GURUS.jpg'); background-size: 800px">
+    <header class="masthead" style="background-image: url('img/GURUS.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
