--- a/about.html
+++ b/about.html
@@ -71,7 +71,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Different souls stiched together.</p>
+          <p>Different souls stiched together. Yes, that's the shortest description that we could think of. We are a bunch of ex-students (ex? Really? In spirit, probably not.) 
+          students of Ramakrishna Mission Residential College, Narendrapur located in the suburbs of the city of joy Kolkata. </p>
         </div>
       </div>
     </div>
