--- a/about.html
+++ b/about.html
@@ -74,7 +74,12 @@
           <p>Different souls stiched together. Yes, that's the shortest description that we could think of. We are a bunch 
             of ex-students (ex? Really? In spirit, probably not!) students of the 
             <a href="http://www.rkmcnarendrapur.org/">Ramakrishna Mission Residential College, Narendrapur </a>
-            located in the suburbs of the city of joy Kolkata. </p>
+            located in the suburbs of the city of joy, <a href="https://en.wikipedia.org/wiki/Kolkata">Kolkata</a>. Like most other 
+            students, we owe almost everything to 
+          Narendrapur. We studied Mathematics, Chemistry, Physics, Statistics, History, English, Economics. And yet, we speak the same 
+          language. Today, after many years of graduation, we are scattered all over the world, busy in as different professions 
+            as imaginable, we still speak the same language, laugh at jokes that are hardly above absolute rubbish, and of course, obscure
+          to other mortals. </p>
         </div>
       </div>
     </div>
