--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
               <a class="nav-link" href="post.html">Post</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="know_us.html">Know Gurus</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
