--- a/about.html
+++ b/about.html
@@ -82,7 +82,13 @@
           Narendrapur. We studied Mathematics, Chemistry, Physics, Statistics, History, English, Economics. And yet, we speak the same 
           language. Today, after many years of graduation, we are scattered all over the world, busy in as different professions 
             as imaginable, we still speak the same language, laugh at jokes that are hardly above absolute rubbish, and of course, obscure
-          to other mortals. </p>
+          to other mortals. We are insignificant people with significant amount of nonsense to talk about. This is our place to give vent to 
+          all of them.</p>
+          <p>It all started with <a href="https://www.bi.vt.edu/ndssl/people/Arindam-Fadikar">Mahaguru</a>, 
+            and <a href="https://www.facebook.com/guruji.tanmoy">Guruji</a>. By the way, Gurukul was the first name to pop up and we 
+            said, "Why not"? Mahaguru and Guruji are therefore the guardians, the spearheads of this clique of ours. But other gurus are also 
+          equally important, and so are the gurumatas (be not mistaken, gurumatas are the wives/partners of gurus) and shisyas. Want to know more
+          about us? Visit us again, more information coming soon!</p>
         </div>
       </div>
     </div>
