--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/npur_guys.jpg'); opacity: 0.7">
+    <header class="masthead" style="background-image: url('img/home-bg2.jpg'); opacity: 0.7">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
