--- a/know_us.html
+++ b/know_us.html
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/GURU_op41.jpg')" >
+    <header class="masthead" style="background-image: url('img/logo.jpg')" >
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
