--- a/know_us.html
+++ b/know_us.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">G</a>
+        <a class="navbar-brand" href="index.html"><img src='img/logo_tr.png' width="10%" height="10%"/></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/logo.jpg')" >
+    <header class="masthead" style="background-image: url('img/logo_tr.jpg')" >
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
