--- a/sudoku.html
+++ b/sudoku.html
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/sudoku_home.jpg')" >
+    <header class="masthead" style="background-image: url('img/sudoku_home2_flip.jpg')" >
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
