rearrangement of html files

--- a/know_us.html
+++ b/know_us.html
@@ -76,12 +76,12 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
 
-	    <p><a href="guruji.html">Guruji</a></p>
-	    <p><a href="mahaguru.html">Mahaguru</a></p>
-	    <p><a href="omoh.html">Omoh* Guru</a></p>
-	    <p><a href="sudoku.html">Sudoku Guru</a></p>
-	    <p><a href="khadya.html">Khadya Guru</a></p>
-	    <p><a href="omoh.html">Omoh* Guru</a></p>
+	    <p><a href="guru_desc/guruji.html">Guruji</a></p>
+	    <p><a href="guru_desc/mahaguru.html">Mahaguru</a></p>
+	    <p><a href="guru_desc/aagun.html">Aagun Guru</a></p>
+	    <p><a href="guru_desc/sudoku.html">Sudoku Guru</a></p>
+	    <p><a href="guru_desc/khadya.html">Khadya Guru</a></p>
+	    <p><a href="guru_desc/omoh.html">Omoh* Guru</a></p>
           </div>
         </div>
       </div>
