new know us page

--- a/know_us.html
+++ b/know_us.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.css" rel="stylesheet">
 
   </head>
 
@@ -74,16 +74,33 @@
     <article>
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
+           
+	  <div class="col-lg-4 col-md-2 mx-auto">
+	    <a class="thumbnail" href="guru_desc/guruji.html"><img src="img/guruji_home.jpg" style="max-width:100%;max-height:100%;"/></a>
+	  </div> 
+          <div class="col-lg-4 col-md-2 mx-auto">
+	    <a class="thumbnail" href="guru_desc/mahaguru.html"><img src="img/mahaguru_home.jpg" style="max-width:100%;max-height:100%;"/></a>
+	  </div>   
+          <div class="col-lg-4 col-md-2 mx-auto">
+	    <a class="thumbnail" href="guru_desc/aagun.html"><img src="img/aagun_home.jpg" style="max-width:100%;max-height:100%;"/></a>
+	  </div>
+	  
+	</div>
 
-	    <p><a href="guru_desc/guruji.html">Guruji</a></p>
-	    <p><a href="guru_desc/mahaguru.html">Mahaguru</a></p>
-	    <p><a href="guru_desc/aagun.html">Aagun Guru</a></p>
-	    <p><a href="guru_desc/sudoku.html">Sudoku Guru</a></p>
-	    <p><a href="guru_desc/khadya.html">Khadya Guru</a></p>
-	    <p><a href="guru_desc/omoh.html">Omoh* Guru</a></p>
-          </div>
-        </div>
+        <div class="row">
+           
+	  <div class="col-lg-4 col-md-2 mx-auto">
+	    <a class="thumbnail" href="guru_desc/sudoku.html"><img src="img/sudoku_home2.jpg" style="max-width:100%;max-height:100%"/></a>
+	  </div> 
+          <div class="col-lg-4 col-md-2 mx-auto">
+	    <a class="thumbnail" href="guru_desc/khadya.html"><img src="img/khadya_home.jpg" style="max-width:100%;max-height:100%;"/></a>
+	  </div>   
+          <div class="col-lg-4 col-md-2 mx-auto">
+	    <a class="thumbnail" href="guru_desc/omoh.html"><img src="img/omoh_home.jpg" style="max-width:100%;max-height:100%;"/></a>
+	  </div>
+	  
+	</div>
+
       </div>
     </article>
 
