--- a/guru_desc/guruji.html
+++ b/guru_desc/guruji.html
@@ -36,19 +36,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="../about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Post</a>
+              <a class="nav-link" href="../post.html">Post</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="know_us.html">Know Gurus</a>
+              <a class="nav-link" href="../know_us.html">Know Gurus</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="../contact.html">Contact</a>
             </li>
           </ul>
         </div>
