--- a/guru_desc/sudoku.html
+++ b/guru_desc/sudoku.html
@@ -75,7 +75,17 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
 
-	    <p>He is the <i>Sudoku Guru</i>.</p>
+	    <p>He is the <i>Sudoku Guru</i>. He got his name through perseverence and dedication of his own, and exasperation of 
+		    others. Here goes the story: He 
+		  was quite fond of solving Sudoku puzzles. Everyday morning right after breakfast at Brahmananda Bhavana (usually tea, and a light 
+		accompaniment), he would go to one of important Gurukakshas (rooms where Gurus stayed), the one graced by the presence of Omoh*guru, Maha shishya, 
+		  and Chimpanzee. No surprise at all that they had a running subscription of a couple of newspapers. Omoh*guru was an expert of languages, and a voracious reader. Maha shishya was also an avid reader, and always 
+		  kept abreast with current affairs. Chimpanzee, ummmm, well, he waited with bated breath for photographs 
+		  of an actress called Koyel Mallick. Not sure why anybody would wait for photograpahs of
+		  Koyel Mallick of all actresses, but all these factors contributed to the availability of newspapers in their Gurukaksha. The one that Sudoku Guru would keep his eyes on 
+		    used to be The Telegraph from Kolkata. Everyday Sudoku Guru would make others wait while he solved the puzzles in the most inefficient of ways. It was not long before
+		  others realised this feat ought to be acknowledged formally. And so it was. Thus became Sudoku Guru the Sudoku Guru. </p>
+		  <p> Sudoku Guru is currently finishing his PhD. More information about his research is available <a href="https://wasiur.github.io/">here</a>. </p>
 
           </div>
         </div>
