--- a/know_us.html
+++ b/know_us.html
@@ -100,6 +100,13 @@
 	  </div>
 	  
 	</div>
+	      
+	<div class="row">
+           
+	  <div class="col-lg-4 col-md-2 mx-auto">
+	    <a class="thumbnail" href="guru_desc/Chimpanzee.html"><img src="img/Chimp_home.JPG" style="max-width:100%;max-height:100%"/></a>
+	  </div> 
+	</div>
 
       </div>
     </article>
