--- a/guru_desc/Chimpanzee.html
+++ b/guru_desc/Chimpanzee.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../img/logo_tr.png">
-    <title>Khadya Guru</title>
+    <title>Chimpanzee</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/khadya_home.jpg')" >
+    <header class="masthead" style="background-image: url('img/Chimp_home.JPG')" >
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
