--- a/guru_desc/mahaguru.html
+++ b/guru_desc/mahaguru.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="../about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../post.html">Post</a>
+              <a class="nav-link" href="../blog.html">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../know_us.html">Know Gurus</a>
@@ -69,7 +69,7 @@
       </div>
     </header>
 
-    <!-- Post Content -->
+    <!-- Blog Content -->
     <article>
       <div class="container">
         <div class="row">
