--- a/know_us.html
+++ b/know_us.html
@@ -104,8 +104,15 @@
 	<div class="row">
            
 	  <div class="col-lg-4 col-md-2 mx-auto">
+	    <a class="thumbnail" href="guru_desc/nritya.html"><img src="img/nritya_home.jpg" style="max-width:100%;max-height:100%"/></a>
+	  </div>
+	  <div class="col-lg-4 col-md-2 mx-auto">
 	    <a class="thumbnail" href="guru_desc/Chimpanzee.html"><img src="img/Chimp_home.JPG" style="max-width:100%;max-height:100%"/></a>
 	  </div> 
+	  <div class="col-lg-4 col-md-2 mx-auto">
+            <a class="thumbnail" href="guru_desc/mahasishya.html"><img src="img/mahasishya_home.JPG" style="max-width:100%;max-height:100%"/></a>
+          </div>
+
 	</div>
 
       </div>
