--- a/guru_desc/Chimpanzee.html
+++ b/guru_desc/Chimpanzee.html
@@ -75,7 +75,12 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
 
-	    <p>He is the <i>Chimpanzee</i>.</p>
+	    <p>He is the <i>Chimpanzee</i>. He is sometimes adorably called Chimp. He has always aped the apes, so to designate him as one 
+		  of them was a no-brainer. Apart from these defining characteristics of his, he has a number of enaviable qualities. He is 
+		  a master of indoor games, studying being one of them. He has won several table tennis, badminton, bridge, 29, chess, carrom
+		    tournaments. When it comes to cricket, he had the ugliest batting style. </p>
+		  <p> When we were discussing his designation, the qualitiy of his to stand out was his Chimpy chimpongness. So, he became 
+		  the official Chimp of our Gurukul. Currently, he is a big banker.</p>
 
           </div>
         </div>
